--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "pg-hstore": "^2.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
     "react-router": "^6.5.0",
     "react-router-dom": "^6.5.0",
     "react-scripts": "5.0.1",
