--- a/package.json
+++ b/package.json
@@ -1,4 +1,10 @@
 {
+  "author": "VeshbyLozano",
+  "main": "api/server.js",
+  "engines": {
+    "node": "16.15.1",
+    "npm": "8.11.0"
+  },
   "name": "e-commerce",
   "version": "0.1.0",
   "private": true,
@@ -16,6 +22,7 @@
     "nodemon": "^2.0.20",
     "pg": "^8.8.0",
     "pg-hstore": "^2.3.4",
+    "postgres": "^3.3.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
@@ -33,7 +40,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:3001",
+  "proxy": "http://localhost:5432",
   "eslintConfig": {
     "extends": [
       "react-app",
